--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Delhi's urban agglomeration, which includes the <span style="color:#2857a4;">sat
 
 
 
-    <section id="#education">
+    <section id="education">
     	<h1 class="section-heading margin-bottom5">
     		<span><i class="fa-solid fa-building-columns"></i></span>
     		<span>EDUCATION</span>
