--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<script src="https://kit.fontawesome.com/2bfc5e779f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<header id="body-header">
+ <header id="body-header">
 	<nav>
 		<ul class="horizontal-list text-center" id="nav-list">
-			<li>
+			<li id="ad">
 				<a href="#">Home</a>
 			</li>
 			<li>
@@ -34,7 +34,33 @@
 			</li>
 			
 		</ul>
-		
+		<div class="dropdown">
+		<div id="hamburger-icon">
+			<i class="fa-solid fa-bars"></i>
+		</div>
+		<ul class="dropdown-list">
+		<a href="#">Home</a>
+			</li>
+			<li>
+				<a href="#about">About</a>
+			</li>
+			<li>
+				<a href="#skills">Skills</a>
+			</li>
+			<li>
+				<a href="#experience">Experience</a>
+			</li>
+			<li>
+				<a href="#education">Education</a>
+			</li>
+			<li>
+				<a href="#portfolio">Portfolio</a>
+			</li>
+			<li>
+				<a href="#contact">Contact</a>
+			</li>
+		</ul>
+	</div>
 	</nav>
 	<div id="name-social-container">
 		<div id="name" class="text-center">
@@ -70,7 +96,7 @@
 			</ul>
 		</div>
 	</div>
-</header>
+</header> 
 <main>
     <section id="about">
     	<div id="my-photo" >
@@ -182,13 +208,7 @@ Delhi's urban agglomeration, which includes the <span style="color:#2857a4;">sat
     	</div>
     	</div>
     </section>
-
-
-
-
-
-
-    <section id="education">
+  <section id="education">
     	<h1 class="section-heading margin-bottom5">
     		<span><i class="fa-solid fa-building-columns"></i></span>
     		<span>EDUCATION</span>
@@ -240,24 +260,7 @@ Delhi's urban agglomeration, which includes the <span style="color:#2857a4;">sat
     	</div>
     	</div>
     </section>
-
-
-
-
-
-   
-
-
-
-
-
-
-
-
-
-
-
-    <section id="portfolio">
+<section id="portfolio">
     	<h1 class="section-heading margin-bottom5">
     		<span><i class="fa-solid fa-briefcase"></i></span>
     		<span>PORTFOLIO</span>
@@ -338,7 +341,7 @@ Delhi's urban agglomeration, which includes the <span style="color:#2857a4;">sat
 			</ul>
 		</div>
 	</div>
-    </section>
-</main>	
+    </section> 
+</main>
 </body>
 </html>
