--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     		<img src="images/selfi.jpg" >
     	</div>
     	<p>
-    		Delhi,[a] officially the National Capital Territory (NCT) of Delhi, <span style="color: #2857a4;">is a city and a union</span> territory of India containing New Delhi, the capital of India. Lying on both sides of the Yamuna river, but chiefly to the west, or beyond its right bank, Delhi shares borders with the state of Uttar Pradesh in the east and with the state of Haryana in the remaining directions. Delhi became a union territory on 1 November 1956 and the NCT in 1995.[15] The NCT covers an area of 1,484 square kilometres (573 sq mi).[5] According to the 2011 census, Delhi's city proper population was over 11 million,[6][16] while the NCT's population was about 16.8 million.[7]
+    		Delhi,[a] officially the National Capital Territory (NCT) of Delhi, <span style="color: #2857a4;">is a city and a union</span> territory of India containing New Delhi, the capital of India. Lying on both sides of the Yamuna river, but chiefly to the west, or beyond its right bank, Delhi shares Delhi's city proper population was over 11 million,[6][16] while the NCT's population was about 16.8 million.[7]
 
-Delhi's urban agglomeration, which includes the <span style="color:#2857a4;">satellite cities Ghaziabad</span>, Faridabad, Gurgaon, Noida, Greater Noida, Meerut and YEIDA city in an area known as the National Capital Region (NCR), has an estimated population of over 28 million, making it the largest metropolitan area in India and the second-largest in the world (after Tokyo)
+Delhi's urban agglomeration, which includes the <span style="color:#2857a4;">satellite cities Ghaziabad</span>, Faridabad, Gurgaon, Noida, 
     	</p>
     </section>
     <section id="skills">
@@ -267,12 +267,39 @@ Delhi's urban agglomeration, which includes the <span style="color:#2857a4;">sat
     		<span>PORTFOLIO</span>
     	</h1>
     	<div class="portfolio-content">
-    		<div><img  src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png"></div>
-    		<div><img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png"></div>
-    		<div><img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png"></div>
-    		<div><img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png"></div>
-    		<div><img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png"></div>
-    		<div><img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png"></div>
+   <!--  		<div class="portfolio-box"><img  src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png"></div>
+   
+    		<div class="portfolio-box"><img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png"></div> -->
+    		<div class="portfolio-box">
+    			<div class="portfolio-box-content">
+    				write about project details here
+    			</div>
+    		</div>
+    		<div class="portfolio-box">
+    			<div class="portfolio-box-content">
+    				write about project details here
+    			</div>
+    		</div>
+    		<div class="portfolio-box">
+    			<div class="portfolio-box-content">
+    				write about project details here
+    			</div>
+    		</div>
+    		<div class="portfolio-box">
+    			<div class="portfolio-box-content">
+    				write about project details here
+    			</div>
+    		</div>
+    		<div class="portfolio-box">
+    			<div class="portfolio-box-content">
+    				write about project details here
+    			</div>
+    		</div>
+    		<div class="portfolio-box">
+    			<div class="portfolio-box-content">
+    				write about project details here
+    			</div>
+    		</div>
     	</div>
     </section>
     <section id="contact">
